--- a/RedisStudy/String/build.gradle
+++ b/RedisStudy/String/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'redis.clients:jedis:5.2.0'
 }
 
 test {
