Feat : SpringBootCache - Jedis 의존성 추가 - UserController - RedisConfig - Fix : JMX 충돌문제 해결

--- a/RedisStudy/SpringBootCache/build.gradle
+++ b/RedisStudy/SpringBootCache/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'redis.clients:jedis:4.3.1'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
