--- a/RedisStudy/SpringBootCache/src/main/resources/application.yaml
+++ b/RedisStudy/SpringBootCache/src/main/resources/application.yaml
@@ -6,3 +6,5 @@ spring:
   jpa:
     hibernate.ddl-auto: create # create option : table trop -> new create
     show-sql: true
+  jmx:
+    enabled: false
